Replaced individual lodash modules with lodash itself.
`lodash.merge` has a security vulnerability,
and as it has not been published in over a year this is unlikely to change in the near future.

Signed-off-by: Ross Hadden <rosshadden@gmail.com>

--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "test:watch": "npm test -- --watch"
   },
   "dependencies": {
-    "lodash.merge": "^4.6.0",
-    "lodash.template": "^4.4.0"
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
